<resources>
    <string name="a">Continue</string>
    <string name="b">%d item</string>
    <string name="c">%d items</string>
    <string name="d">Others</string>
    <string name="e">%s created successfully.</string>
    <string name="f">%s removed successfully.</string>
    <string name="g">Navigate home</string>
    <string name="h">Navigate up</string>
    <string name="i">More options</string>
    <string name="j">Done</string>
    <string name="k">See all</string>
    <string name="l">Choose an app</string>
    <string name="m">OFF</string>
    <string name="n">ON</string>
    <string name="o">Alt+</string>
    <string name="p">Ctrl+</string>
    <string name="q">delete</string>
    <string name="r">enter</string>
    <string name="s">Function+</string>
    <string name="t">Meta+</string>
    <string name="u">Shift+</string>
    <string name="v">space</string>
    <string name="w">Sym+</string>
    <string name="x">Menu+</string>
    <string name="y">Search…</string>
    <string name="z">Clear query</string>
    <string name="a0">Search query</string>
    <string name="a1">Search</string>
    <string name="a2">Submit query</string>
    <string name="a3">Voice search</string>
    <string name="a4">Share with</string>
    <string name="a5">Share with %s</string>
    <string name="a6">Collapse</string>
    <string name="a7">"Block Ads on some websites. Feedback to us if ads aren't blocked."</string>
    <string name="a8">Simple &amp; Fast</string>
    <string name="a9">Add</string>
    <string name="a_">AD Blocker</string>
    <string name="aa">Add bookmarks</string>
    <string name="ab">Due to the limitations of the Roku system, we recommend that you add the XCast receiver channel to your Roku TV. Then you can cast videos properly.</string>
    <string name="ac">Add XCast channel to your Roku TV</string>
    <string name="ad">Add IPTV</string>
    <string name="ae">Add Roku by IP</string>
    <string name="af">Add to playlist</string>
    <string name="ag">%d added</string>
    <string name="ah">Adjust TV</string>
    <string name="ai">Airplay（4th gen）tvOS 10.2+.</string>
    <string name="aj">All Audios</string>
    <string name="ak">All Photos</string>
    <string name="al">All Videos</string>
    <string name="am">Allow</string>
    <string name="an">Always do this</string>
    <string name="ao">androidx.startup</string>
    <string name="ap">You can turn off the hotspot in system first and reconnect to WiFi.</string>
    <string name="aq">Hotspot is ON</string>
    <string name="ar">XCast</string>
    <string name="as">9Cast - Cast To TV</string>
    <string name="at">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="au">Only Apple TV is supported among Airplay devices now.</string>
    <string name="av">Ascending</string>
    <string name="aw">Ask every time</string>
    <string name="ax">Audio</string>
    <string name="ay">"Audios don't support subtitles"</string>
    <string name="az">Your device %s indicates that there is no audio track available for this video, possibly because your device does not support multiple audio tracks. If your device falls into one of the following categories, please try using the remote control to switch audio tracks.</string>
    <string name="b0">Devices that support multiple audio tracks in different video formats</string>
    <string name="b1">Switch audio tracks with the remote control</string>
    <string name="b2">Audio Tracks</string>
    <string name="b3">Auto</string>
    <string name="b4">Auto Rotate</string>
    <string name="b5">Available device(%d)</string>
    <string name="b6">Baidu</string>
    <string name="b7">"Due to system's battery optimization, XCast may be stopped in a moment.

You can disable it to make XCast work properly."</string>
    <string name="b8">"Due to system's battery optimization, XCast may be stopped in a moment."</string>
    <string name="b9">Bing</string>
    <string name="b_">Blocker</string>
    <string name="ba">Bookmark added</string>
    <string name="bb">Bookmark already exists</string>
    <string name="bc">Bookmark limit reached</string>
    <string name="bd">%1$s &amp; %2$s</string>
    <string name="be">Bookmarks</string>
    <string name="bf">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="bg">Expand halfway</string>
    <string name="bh">Cast device name/brand/model?</string>
    <string name="bi">Brightness :</string>
    <string name="bj">Brightness</string>
    <string name="bk">Browse</string>
    <string name="bl">Browser</string>
    <string name="bm">Browser on TV, PC, PS4 and other boxes.</string>
    <string name="bn">Buffering…</string>
    <string name="bo">Is it playing well?</string>
    <string name="bp">Buy PRO</string>
    <string name="bq">You can cast the media from your phone now.</string>
    <string name="br">Cancel</string>
    <string name="bs">"I can't open this page."</string>
    <string name="bt">Cast</string>
    <string name="bu">Connected to %1$s</string>
    <string name="bv">Connecting to %1$s</string>
    <string name="bw">Cast</string>
    <string name="bx">Disconnect</string>
    <string name="by">Cast to</string>
    <string name="bz">Casting to %s</string>
    <string name="c0">Select Language</string>
    <string name="c1">Characters entered %1$d of %2$d</string>
    <string name="c2">Character limit exceeded %1$d of %2$d</string>
    <string name="c3">%1$d/%2$d</string>
    <string name="c4">Chip text</string>
    <string name="c5">Chromecast, smart TVs with in-built Chromecast and other Google Cast devices.</string>
    <string name="c6">Clear history</string>
    <string name="c7">Clear text</string>
    <string name="com.crashlytics.android.build_id">1</string>
    <string name="c8">00000000000000000000000000000000</string>
    <string name="c9">Enable</string>
    <string name="c_">"%1$s won't work unless you enable Google Play services."</string>
    <string name="ca">Enable Google Play services</string>
    <string name="cb">Install</string>
    <string name="cc">"%1$s won't run without Google Play services, which are missing from your device."</string>
    <string name="cd">Get Google Play services</string>
    <string name="ce">Google Play services availability</string>
    <string name="cf">Google Play services error</string>
    <string name="cg">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="ch">"%1$s won't run without Google Play services, which are not supported by your device."</string>
    <string name="ci">Update</string>
    <string name="cj">"%1$s won't run unless you update Google Play services."</string>
    <string name="ck">Update Google Play services</string>
    <string name="cl">"%1$s won't run without Google Play services, which are currently updating."</string>
    <string name="cm">New version of Google Play services needed. It will update itself shortly.</string>
    <string name="cn">Open on phone</string>
    <string name="co">Sign in</string>
    <string name="cp">Sign in with Google</string>
    <string name="cq">Connection failed</string>
    <string name="cr">You denied the request.</string>
    <string name="cs">Connection request</string>
    <string name="ct">Please confirm the connection request on TV.</string>
    <string name="cu">Connect</string>
    <string name="cv">Connected successfully</string>
    <string name="cw">Connect to Apple TV</string>
    <string name="cx">Connected to %s</string>
    <string name="cy">Connecting...</string>
    <string name="cz">Something wrong with connection</string>
    <string name="d0">Convert</string>
    <string name="d1">Convert M3U8</string>
    <string name="d2">Convert this video?</string>
    <string name="d3">"Your device may not support M3U8 video, it's better to convert it to TS format."</string>
    <string name="d4">Copied to clipboard.</string>
    <string name="d5">Link copied to clipboard</string>
    <string name="d6">Create</string>
    <string name="d7">Create Playlist</string>
    <string name="d8">Date</string>
    <string name="d9">DuckDuckGo</string>
    <string name="default_web_client_id">661077204669-t2af6udvs8i3dh6a0kb0dp8asp6ek5ba.apps.googleusercontent.com</string>
    <string name="d_">Delete</string>
    <string name="da">Delete fail</string>
    <string name="db">Delete file</string>
    <string name="dc">File will be deleted permanently.</string>
    <string name="dd">Delete successfully</string>
    <string name="de">Descending</string>
    <string name="df">Device is connected.</string>
    <string name="dg">Device Not Supported</string>
    <string name="dh">Your phone may not support the screen mirroring function, you can search the model on the website to double check.</string>
    <string name="di">You can also send us the device model to help us improve our app.</string>
    <string name="dj">Directories</string>
    <string name="dk">Disable</string>
    <string name="dl">Disable the battery optimization to avoid losing connection.</string>
    <string name="dm">Disconnect</string>
    <string name="dn">Smart TVs with DLNA. Samsung, Hisense, Sony smart TVs etc.</string>
    <string name="do">"Don't convert"</string>
    <string name="dp">"Don't Worry"</string>
    <string name="dx">Enjoy unlimited features!</string>
    <string name="ei">Feedback</string>
    <string name="ex">Forward/Rewind interval</string>
    <string name="ey">Google drive</string>
    <string name="ez">Google photos</string>
    <string name="f5">Help</string>
    <string name="fp">History</string>
    <string name="fq">Home</string>
    <string name="fu">How to use</string>
    <string name="g2">Invalid IPTV address</string>
    <string name="g3">IPTV</string>
    <string name="g4">IPTV address</string>
    <string name="g9">Language</string>
    <string name="ga">Learn about premium</string>
    <string name="gc">Legal</string>
    <string name="gd">Cancel</string>
    <string name="gh">Submit</string>
    <string name="gk">"I don't like the design"</string>
    <string name="gl">"It doesn't have the functions I need"</string>
    <string name="gm">"It's not easy to use"</string>
    <string name="gn">"It's too complicated"</string>
    <string name="go">The translation is poor</string>
    <string name="gp">Your feedback is useful.</string>
    <string name="gz">sans-serif-medium</string>
    <string name="h0">sans-serif</string>
    <string name="ji">Name</string>
    <string name="kr">OK</string>
    <string name="lr">Photo</string>
    <string name="lu">Playlist</string>
    <string name="lz">Privacy policy</string>
    <string name="mb">Premium</string>
    <string name="me">Unlock all features.</string>
    <string name="mm">Recent videos</string>
    <string name="mv">Remove All Ads Permanently.</string>
    <string name="nu">Save</string>
    <string name="nw">Screen Mirroring</string>
    <string name="nz">Search engine</string>
    <string name="o_">Select file</string>
    <string name="of">Settings</string>
    <string name="og">About</string>
    <string name="oh">FAQ</string>
    <string name="oi">Frequently asked questions</string>
    <string name="oj">Report bugs and tell us what to improve</string>
    <string name="ok">General</string>
    <string name="pf">MP4/MKV</string>
    <string name="pg">M3U8</string>
    <string name="ph">LG WebOS TVs using DLNA (use the TV remote control)</string>
    <string name="pi">Samsung TVs using DLNA (use the TV remote control)</string>
    <string name="pj">Other DLNA TVs might support this, try using the TV remote control</string>
    <string name="pk">"Roku (use '*' on the Roku remote control)"</string>
    <string name="px">Version: %s</string>
    <string name="py">Video</string>
    <string name="q9">Web</string>
    <string name="qj">Work in background</string>
</resources>