<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="fill_parent" android:layout_height="fill_parent" android:fillViewport="true"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TextView android:textSize="20.0sp" android:textColor="#deffffff" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="21.0dip" android:text="@string/b1" android:layout_marginStart="24.0dip" android:layout_marginEnd="24.0dip" app:k5="@font/c" />
        <TextView android:textSize="14.0sp" android:textColor="#deffffff" android:id="@id/z8" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="11.0dip" android:text="@string/az" android:layout_marginStart="24.0dip" android:layout_marginEnd="24.0dip" />
        <LinearLayout android:orientation="vertical" android:background="@drawable/ts" android:paddingTop="12.0dip" android:paddingBottom="11.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="5.0dip" android:paddingStart="16.0dip" android:paddingEnd="16.0dip" android:layout_marginStart="24.0dip" android:layout_marginEnd="24.0dip">
            <TextView android:text="@string/b0" app:k5="@font/c" style="@style/th" />
            <TextView android:layout_marginTop="6.0dip" android:text="@string/pf" style="@style/th" />
            <LinearLayout android:layout_marginTop="3.0dip" style="@style/tj">
                <ImageView style="@style/ti" />
                <TextView android:text="@string/ph" style="@style/th" />
            </LinearLayout>
            <LinearLayout style="@style/tj">
                <ImageView style="@style/ti" />
                <TextView android:text="@string/pi" style="@style/th" />
            </LinearLayout>
            <LinearLayout style="@style/tj">
                <ImageView style="@style/ti" />
                <TextView android:text="@string/pj" style="@style/th" />
            </LinearLayout>
            <LinearLayout style="@style/tj">
                <ImageView style="@style/ti" />
                <TextView android:text="@string/pk" style="@style/th" />
            </LinearLayout>
            <TextView android:layout_marginTop="7.0dip" android:text="@string/pg" style="@style/th" />
            <LinearLayout android:layout_marginTop="3.0dip" style="@style/tj">
                <ImageView style="@style/ti" />
                <TextView android:text="@string/pk" style="@style/th" />
            </LinearLayout>
        </LinearLayout>
        <View android:id="@id/gz" android:background="#ff303030" android:layout_width="fill_parent" android:layout_height="0.33000004dip" android:layout_marginTop="24.0dip" />
        <TextView android:textSize="14.0sp" android:textColor="@color/ar" android:layout_gravity="end" android:id="@id/qf" android:background="?android:selectableItemBackground" android:padding="8.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:layout_marginBottom="18.0dip" android:text="@string/kr" android:layout_marginEnd="8.0dip" app:k5="@font/d" />
    </LinearLayout>
</ScrollView>