<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <include android:id="@id/z0" layout="@layout/hl" />
    <ScrollView android:id="@id/ua" android:scrollbars="none" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <LinearLayout android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content">
                <LinearLayout android:orientation="vertical" android:id="@id/s3" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content">
                    <TextView android:textSize="16.0sp" android:textStyle="bold" android:textColor="#de000000" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="24.0dip" android:text="@string/dx" android:layout_marginStart="16.0dip" />
                    <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="14.0dip" android:layout_marginStart="16.0dip">
                        <androidx.appcompat.widget.AppCompatImageView android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@mipmap/b3" android:layout_marginEnd="12.0dip" />
                        <TextView android:textSize="14.0sp" android:textColor="#8a000000" android:gravity="center_vertical" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/me" />
                    </LinearLayout>
                    <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="14.0dip" android:layout_marginStart="16.0dip">
                        <androidx.appcompat.widget.AppCompatImageView android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginEnd="12.0dip" app:v9="@mipmap/b3" />
                        <TextView android:textSize="14.0sp" android:textColor="#8a000000" android:gravity="center_vertical" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/mv" />
                    </LinearLayout>
                    <androidx.appcompat.widget.AppCompatButton android:textSize="15.0sp" android:textColor="#ffffffff" android:id="@id/ln" android:background="@drawable/oq" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="20.0dip" android:text="@string/ga" android:layout_marginStart="16.0dip" android:layout_marginEnd="16.0dip" />
                </LinearLayout>
            </LinearLayout>
            <TextView android:id="@id/yt" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="21.0dip" android:text="@string/ok" style="@style/gt" />
            <RelativeLayout android:id="@id/ld" android:background="?android:selectableItemBackground" android:padding="16.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <TextView android:id="@id/lf" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/g9" style="@style/gv" />
                <TextView android:id="@id/lg" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/b3" android:layout_below="@id/lf" style="@style/gu" />
            </RelativeLayout>
            <RelativeLayout android:id="@id/j6" android:background="?android:selectableItemBackground" android:padding="16.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <TextView android:id="@id/j5" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/ex" style="@style/gv" />
                <TextView android:id="@id/j4" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_below="@id/j5" style="@style/gu" />
            </RelativeLayout>
            <RelativeLayout android:id="@id/dn" android:background="?android:selectableItemBackground" android:padding="16.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <TextView android:id="@id/a19" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/qj" style="@style/gv" />
                <TextView android:id="@id/dm" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/dl" android:layout_below="@id/a19" style="@style/gu" />
            </RelativeLayout>
            <View style="@style/tu" />
            <TextView android:id="@id/yy" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/q9" style="@style/gt" />
            <RelativeLayout android:id="@id/a0o" android:background="?android:selectableItemBackground" android:padding="16.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <androidx.appcompat.widget.SwitchCompat android:id="@id/ft" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_alignParentEnd="true" />
                <TextView android:ellipsize="end" android:id="@id/a0w" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/d1" android:lines="1" android:layout_marginEnd="5.0dip" android:layout_toStartOf="@id/ft" style="@style/gv" />
                <TextView android:id="@id/a0v" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/d3" android:layout_below="@id/a0w" style="@style/gu" />
                <androidx.appcompat.widget.AppCompatCheckBox android:id="@id/d8" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/aw" android:layout_below="@id/a0v" android:layout_marginStart="-7.0dip" />
            </RelativeLayout>
            <View style="@style/tu" />
            <TextView android:id="@id/yu" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/f5" style="@style/gt" />
            <RelativeLayout android:id="@id/ju" android:background="?android:selectableItemBackground" android:padding="16.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <TextView android:id="@id/jw" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/oh" style="@style/gv" />
                <TextView android:id="@id/jx" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/oi" android:layout_below="@id/jw" style="@style/gu" />
            </RelativeLayout>
            <View style="@style/tu" />
            <RelativeLayout android:id="@id/if" android:background="?android:selectableItemBackground" android:padding="16.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <TextView android:id="@id/in" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/ei" style="@style/gv" />
                <TextView android:id="@id/io" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/oj" android:layout_below="@id/in" style="@style/gu" />
            </RelativeLayout>
            <View style="@style/tu" />
            <TextView android:id="@id/ys" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/og" style="@style/gt" />
            <RelativeLayout android:id="@id/rv" android:background="?android:selectableItemBackground" android:padding="16.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <TextView android:id="@id/rw" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/lz" style="@style/gv" />
            </RelativeLayout>
            <View style="@style/tu" />
            <RelativeLayout android:id="@id/lr" android:background="?android:selectableItemBackground" android:padding="16.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <TextView android:id="@id/lt" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/gc" style="@style/gv" />
            </RelativeLayout>
            <View android:id="@id/ls" style="@style/tu" />
            <RelativeLayout android:background="?android:selectableItemBackground" android:padding="16.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <TextView android:id="@id/zu" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/px" style="@style/gv" />
            </RelativeLayout>
            <TextView android:id="@id/gp" android:background="?android:selectableItemBackground" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="50.0dip" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>