<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:background="@drawable/oy" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <ScrollView android:layout_width="fill_parent" android:layout_height="wrap_content">
        <RelativeLayout android:layout_width="fill_parent" android:layout_height="wrap_content">
            <TextView android:textSize="@dimen/ne" android:textColor="@color/cy" android:id="@id/im" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/dw" android:layout_marginTop="@dimen/dw" android:layout_marginRight="@dimen/dw" android:layout_marginBottom="@dimen/fj" android:text="@string/gp" android:fontFamily="@string/h0" />
            <LinearLayout android:orientation="vertical" android:id="@id/il" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/dw" android:layout_marginRight="@dimen/dw" android:layout_below="@id/im">
                <CheckBox android:textSize="@dimen/ne" android:textColor="@color/cy" android:id="@id/ig" android:background="@color/cx" android:paddingLeft="@dimen/di" android:layout_width="fill_parent" android:layout_height="wrap_content" android:button="@drawable/os" android:minHeight="@dimen/el" android:text="@string/gk" android:fontFamily="@string/h0" android:paddingStart="@dimen/di" />
                <CheckBox android:textSize="@dimen/ne" android:textColor="@color/cy" android:id="@id/ih" android:background="@color/cx" android:paddingLeft="@dimen/di" android:layout_width="fill_parent" android:layout_height="wrap_content" android:button="@drawable/os" android:minHeight="@dimen/el" android:text="@string/gl" android:fontFamily="@string/h0" android:paddingStart="@dimen/di" />
                <CheckBox android:textSize="@dimen/ne" android:textColor="@color/cy" android:id="@id/ii" android:background="@color/cx" android:paddingLeft="@dimen/di" android:layout_width="fill_parent" android:layout_height="wrap_content" android:button="@drawable/os" android:minHeight="@dimen/el" android:text="@string/gm" android:fontFamily="@string/h0" android:paddingStart="@dimen/di" />
                <CheckBox android:textSize="@dimen/ne" android:textColor="@color/cy" android:id="@id/ij" android:background="@color/cx" android:paddingLeft="@dimen/di" android:layout_width="fill_parent" android:layout_height="wrap_content" android:button="@drawable/os" android:minHeight="@dimen/el" android:text="@string/gn" android:fontFamily="@string/h0" android:paddingStart="@dimen/di" />
                <CheckBox android:textSize="@dimen/ne" android:textColor="@color/cy" android:id="@id/ik" android:background="@color/cx" android:paddingLeft="@dimen/di" android:layout_width="fill_parent" android:layout_height="wrap_content" android:button="@drawable/os" android:minHeight="@dimen/el" android:text="@string/go" android:fontFamily="@string/h0" android:paddingStart="@dimen/di" />
            </LinearLayout>
            <LinearLayout android:gravity="end|center" android:orientation="horizontal" android:paddingBottom="@dimen/fj" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/dw" android:layout_marginTop="@dimen/ds" android:layout_marginRight="@dimen/fj" android:layout_below="@id/il" android:layout_marginStart="@dimen/dw" android:layout_marginEnd="@dimen/fj">
                <Button android:textSize="@dimen/nc" android:textColor="@color/cs" android:gravity="center" android:id="@id/ea" android:background="?ud" android:paddingLeft="@dimen/di" android:paddingRight="@dimen/di" android:layout_width="wrap_content" android:layout_height="wrap_content" android:minWidth="@dimen/f3" android:minHeight="@dimen/el" android:text="@string/gd" android:textAllCaps="true" android:fontFamily="@string/gz" />
                <Button android:textSize="@dimen/nc" android:textColor="@color/cs" android:gravity="center" android:id="@id/ed" android:background="?ud" android:paddingLeft="@dimen/di" android:paddingRight="@dimen/di" android:layout_width="wrap_content" android:layout_height="wrap_content" android:minWidth="@dimen/f3" android:minHeight="@dimen/el" android:text="@string/gh" android:textAllCaps="true" android:fontFamily="@string/gz" />
            </LinearLayout>
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>