<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent" android:paddingStart="24.0dip" android:paddingEnd="24.0dip"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <TextView android:textSize="18.0sp" android:textColor="#de000000" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="20.0dip" android:text="@string/ad" app:k5="@font/c" />
    <TextView android:textSize="14.0sp" android:textColor="#ff000000" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="24.0dip" android:text="@string/g4" android:alpha="0.38" />
    <androidx.appcompat.widget.AppCompatEditText android:theme="@style/tx" android:textSize="14.0sp" android:textColor="#de000000" android:id="@id/zr" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="8.0dip" android:inputType="text" android:imeOptions="actionDone" app:k5="@font/c" />
    <TextView android:textSize="12.0sp" android:textColor="#ffeb4242" android:id="@id/i4" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/g2" />
    <Button android:textSize="13.0sp" android:textColor="@color/ar" android:id="@id/v6" android:background="@drawable/pa" android:layout_width="90.0dip" android:layout_height="36.0dip" android:layout_marginTop="16.0dip" android:text="@string/o_" app:k5="@font/c" />
    <TextView android:textSize="14.0sp" android:textColor="#ff000000" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="24.0dip" android:text="@string/ji" android:alpha="0.38" />
    <androidx.appcompat.widget.AppCompatEditText android:theme="@style/tx" android:textSize="14.0sp" android:textColor="#de000000" android:id="@id/pm" android:layout_width="fill_parent" android:layout_height="wrap_content" android:inputType="text" android:imeOptions="actionDone" app:k5="@font/c" />
    <LinearLayout android:layout_gravity="end" android:orientation="horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="32.0dip" android:layout_marginBottom="16.0dip">
        <TextView android:textSize="14.0sp" android:textColor="@color/ar" android:id="@id/eg" android:background="?android:selectableItemBackground" android:paddingTop="10.0dip" android:paddingBottom="10.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/br" android:textAllCaps="true" android:paddingStart="14.0dip" android:paddingEnd="14.0dip" android:layout_marginEnd="8.0dip" app:k5="@font/c" />
        <TextView android:textSize="14.0sp" android:textColor="@color/ar" android:id="@id/u3" android:background="?android:selectableItemBackground" android:paddingTop="10.0dip" android:paddingBottom="10.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/nu" android:textAllCaps="true" android:paddingStart="14.0dip" android:paddingEnd="14.0dip" app:k5="@font/c" />
    </LinearLayout>
</LinearLayout>